Changed input vars docker_service_* to service_*

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -5,8 +5,11 @@
     - include_role:
         name: docker_service_configs
       vars:
-        docker_service_name: foo
-        docker_service_configs:
+        service_name: foo
+        service_configs:
           - prefix: bar
             content: Hello world
             filename: /foo.conf
+
+    - debug:
+        msg: "{{ docker_service_configs }}"
